Sun Dec 23 18:16:52 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac: Fix typo in previous commit.

Sun Dec 23 18:06:45 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac: Use the new flock()-based flint-compatible locking
	  under DJGPP, and remove special cases to disable chert and brass
	  under DJGPP (untested, as I no longer have a DJGPP setup or
	  cross-compiler).

Sun Dec 23 17:51:36 GMT 2012  Olly Betts <olly@survex.com>

	* backends/flint_lock.cc,backends/flint_lock.h: Add flock() based
	  locking implementation, which is much simpler than using fcntl() due
	  to saner semantics around releasing locks when closing other
	  descriptors on the same file (at least on platforms where flock()
	  isn't just a compatibility wrapper around fcntl()).  We can't simply
	  switch to this without breaking locking compatibility with previous
	  releases, though it might be useful for porting to platforms without
	  fcntl() locking.  Also, flock() apparently doesn't work over NFS -
	  perhaps that's OK, but we should at least check the failure mode.

Sat Dec 22 06:29:23 GMT 2012  Olly Betts <olly@survex.com>

	* backends/flint_lock.cc: Only set close-on-exec on the lockfile fd if
	  we are able to clear it in the child process, and clear it in the
	  child process if we set it when we opened it.

Sat Dec 22 06:14:40 GMT 2012  Olly Betts <olly@survex.com>

	* backends/flint_lock.cc,net/progclient.cc: Use SOCK_CLOEXEC with
	  socketpair(), and then clear the close-on-exec flag for child process
	  end of the pair before we call exec.

Sat Dec 22 06:13:44 GMT 2012  Olly Betts <olly@survex.com>

	* net/progclient.cc: Remove O_CLOEXEC where we open stderr on /dev/null
	  before calling exec as we want that fd to survive the exec!

Sat Dec 22 05:53:12 GMT 2012  Olly Betts <olly@survex.com>

	* HACKING,backends/flint_lock.cc,common/Makefile.mk,
	  common/safesyssocket.h,net/progclient.cc,net/tcpclient.cc,