@@ -1033,13 +1033,18 @@ just_had_operator_needing_term:
 			string name;
 			if (it != end && is_double_quote(*it)) {
 			    // Quoted boolean term (can contain any character).
+			    bool fancy = (*it != '"');
 			    ++it;
 			    while (it != end) {
 				if (*it == '"') {
 				    // Interpret "" as an escaped ".
 				    if (++it == end || *it != '"')
 					break;
-				} else if (is_double_quote(*it)) {
+				} else if (fancy && is_double_quote(*it)) {
+				    // If the opening quote was ASCII, then the
+				    // closing one must be too - otherwise
+				    // the user can't protect non-ASCII double
+				    // quote characters by quoting or escaping.
 				    ++it;
 				    break;
 				}
