@@ -232,10 +232,12 @@ static const test test_or_queries[] = {
     { "category:“Hello world”", "0 * XCAT:Hello world" },
     { "category:“literal \"\"”", "0 * XCATliteral \"" },
     { "category:“ ”", "0 * XCAT " },
-    { "category:\" ”", "0 * XCAT " },
+    { "category:\" ”\"", "0 * XCAT ”" },
+    { "category:\" ”", "0 * XCAT ”" },
     { "category:“ \"", "0 * XCAT " },
     { "category:“”", "0 * XCAT" },
-    { "category:\"”", "0 * XCAT" },
+    { "category:\"”\"", "0 * XCAT”" },
+    { "category:\"”", "0 * XCAT”" },
     { "category:“\"", "0 * XCAT" },
     { "category:“(unterminated)", "0 * XCAT(unterminated)" },
     // Real world examples from tweakers.net:
